kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: daylight-clock
  namespace: daylight
spec:
  selector:
    app: daylight-clock
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
