kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: daylight-clock-ingress
  namespace: daylight
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - hosts:
    - daylight.liem.zip
    secretName: daylight-tls
  rules:
  - host: daylight.liem.zip
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: daylight-clock
            port:
              number: 80
